# bigint

./: .gitignore  CMakeLists.txt  README.md  bigint.pc.in  build.sh
include/: array.h  bigint.h
src/: array.c
tests/: array.c  bigint.c
